# ocr-tool

./: .gitignore  OCR-Tool-one-file.spec  OCR-Tool.spec  README.md  app.py  capture_tool.py  hotkey_manager.py  hover_pick.py  hover_tool.py  main.py  ocr_engine.py  ocr_engine_v5.py  pyproject.toml  requirements.txt  settings_manager.py  utils.py  v1.py
components/: floating_indicator.py
core/: hotkey_manager.py  ocr_engine.py  ocr_engine_v5.py  settings_manager.py
demos/: OCR.yaml  paddlex_demo.py  rapidocr_demo.py  settings_manager_demo.py  settings_page_demo.py
ocr_result/: ocr_res.json
old/: capture_pick.py  hover_pick.py
ui/: capture_tool.py  hover_tool.py  main_window.py  settings_dialog.py  status_label.py  theme.py
util/: utils.py
