[project]
name = "ocr-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "techfs",email = "techfs@163.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyside6 (>=6.8.3,<7.0.0)",
    "paddlepaddle (>=3.0.0,<4.0.0)",
    "paddleocr (>=2.10.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false  # 禁用打包功能